# Gamma-ray-spectrum-reconstruction

./: README.md
CPT/: data_gen.py  data_gen_2var.py  data_to_ang.py  data_to_dd.py  input  mle_1var.py  mle_large_all.py  mle_large_emit.py  mle_nm.py  mle_ref.py  plot_newtemp.py
Deep_Learning/: pg-pong.py  simple_RL.py
MLE/: CMakeLists.txt  plot_spectrum.py
MLE/src/: merit.cxx  merit.hxx  radiation.cxx  radiation.hxx  trajectory.cxx  trajectory.hxx
Multishot-reconstruction /: MultiShot_PairSpectrometerTraining.ipynb  MultiShot_PairSpectrometerTraining.py  pair_model.h5  spectrum.h5
PEDRO/: PEDRO_Neural_Network_Training.py  spectrum.h5
